<a> decoration removed and added borders to the sections so we can see what space they are taking up

--- a/style.css
+++ b/style.css
@@ -9,7 +9,20 @@ html {
     scroll-behavior: smooth; 
 
     }
+    /*::webkit-scrollbar is used to tell the browser that the code is changing something with the bar*/
     body::-webkit-scrollbar {
         display:none;
+    }
+
+    .info-section{
+        border:1px,red,dotted;
+    }
+    .neptune-section{
+        border:1px,blue,solid;
+    }
+
+    a {
+        color:darkgrey;
+        text-decoration: none;
     }
     
