--- a/styling.css
+++ b/styling.css
@@ -1,7 +1,10 @@
 /* FREDRIKS CSS FILE */
 
 .nav-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border:hidden;
     height: 100px;
-    backdrop-filter:blur(5px);
+    backdrop-filter:blur(2px);
 }
