--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     background-image:url(images/pexels-krisof-1252890.jpg);
     background-size: 100%;
-    font-family: 'Space Grotesk';
+    font-family: 'Berlin Sans FB Demi';
     color:lightgrey;
 }
 html { 
