--- a/styling.css
+++ b/styling.css
@@ -6,5 +6,23 @@
     align-items: center;
     border:hidden;
     height: 100px;
-    backdrop-filter:blur(2px);
+    /* backdrop-filter:blur(2px); */
+    flex-direction: row;
+}
+
+.nav-bar img {
+    padding-right: 900px;
+    margin: 0;
+    width: 250px;
+}
+
+.nav-bar a {
+    font-size: 34px;
+    font-weight: bold;
+    padding-inline: 40px;
+    color: white;
+}
+
+.nav-bar a:hover {
+    color: rgb(73, 100, 122);
 }
