Fixed max width and added a placeholder image for planet

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
     }
 
     .info-section{
-        border:1px,red,dotted;
+        border:1px,rgb(59, 11, 136),dotted;
         max-width:75%;
         
     }
