--- a/styling.css
+++ b/styling.css
@@ -36,5 +36,33 @@ hr {
     width: 90%;
 }
 
+.info-section .neptune-section {
+    margin: auto;
+    margin-top: 128px;
+    max-width: 85%;
+    display: flex;
+    flex-direction: row;
+}
 
+.info-section {
+    margin: auto;
+    margin-top: 128px;
+    max-width: 85%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 
+.info-text {
+    margin-right: 300px;
+}
+
+.info-text h1 {
+    font-size: 64px;
+}
+
+.info-section div img {
+    margin: 0;
+    width: 500px;
+}
