--- a/styling.css
+++ b/styling.css
@@ -55,11 +55,16 @@ hr {
 }
 
 .info-text {
-    margin-right: 300px;
+    margin-right: 200px;
+    height: 300px;
 }
 
 .info-text h1 {
     font-size: 64px;
+}
+.info-text h2 {
+    font-size: 24px;
+    padding-right: 200px;
 }
 
 .info-section div img {
