--- a/style.css
+++ b/style.css
@@ -28,5 +28,20 @@ html {
     }
 
     .wrap{
-        max-width:50%;
+        width:370px;
+        height:390px;
+        overflow:hidden;
+        max-width:75%;
+        object-fit: contain;
+        border-radius: 100%;
+        image-resolution: 20%;
+        margin-left:86%;
     }
+    #Neptune{
+        height:400px;
+        object-position: -50%;
+        margin-left:-20%;
+        margin-top:-10%;
+        box-shadow: 20px;
+    }
+
