--- a/styling.css
+++ b/styling.css
@@ -55,8 +55,8 @@ hr {
 }
 
 .info-text {
-    margin-right: 200px;
     height: 300px;
+    padding-inline: 200px;
 }
 
 .info-text h1 {
@@ -64,7 +64,6 @@ hr {
 }
 .info-text h2 {
     font-size: 24px;
-    padding-right: 200px;
 }
 
 .info-section div img {
