--- a/style.css
+++ b/style.css
@@ -16,16 +16,13 @@ html {
         
     }
 
-    .info-section{
-        
-        max-width:75%;
-        
-    }
     .neptune-section{
-       
-        max-width:75%;
-        margin-left:10%;
-        max-height:100%;
+        margin: auto;
+        margin-top: 128px;
+        max-width: 85%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
     }
 
     a {
@@ -33,22 +30,16 @@ html {
         text-decoration: none;
     }
 
-    .wrap{
-        max-width:65%;
-        margin-left:-5%;
-        width:55%;
-        
+    .wrap img {
+        width: 1000px;
+        margin-left: -200px;
     }
     #Neptunetext{
-        
-        max-width:50%;
-        margin-left:51%;
-        margin-top:-30%;
-        font-size:30px;
+        font-size:48px;
         
     }
 
     #NeptuneTexting{
-        font-size:25px;
+        font-size:24px;
     }
 
