--- a/styling.css
+++ b/styling.css
@@ -35,9 +35,9 @@ hr {
     width: 90%;
 }
 
-.info-section .neptune-section {
+.info-section{
     margin: auto;
-    margin-top: 128px;
+    margin-block: 128px;
     max-width: 85%;
     display: flex;
     flex-direction: row;
